Removed all unnecessary files

--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
 Welcome to The Topology of Movement!  To get started, you can watch the Introduction video below:
 
 
-<div class="flex-container">
- <img src="./images/fake-teaser-1.png" class="shrinkToFit" width="100%" style="border:2px solid #332241">
+<div class="video-container">
+  <iframe
+      src="https://www.youtube.com/embed/2rvTg5SpiO8"
+      width="700"
+      height="480"
+      frameborder="0"
+      allowfullscreen="">
+  </iframe>
 </div>
-
 
 This minicourse is organized into four lessons, each of which can be completed in 30 minutes to an hour.  It is free of charge and open to everyone.
 
