--- a/lesson-1.html
+++ b/lesson-1.html
@@ -30,208 +30,16 @@
  <img src="./images/banner-1.png" class="shrinkToFit" width="100%" style="border:2px solid #332241; border-radius: 15px;">
 </div>
 
-In this first lesson, we will explore some basic properties of rotations. 
 
 </md>
 
-<p> Video 1A.</p>
+<p> Coming Soon!  Contents will be posted by January 1st, 2024. </p>
 
 
 <div class="flex-container">
- <img src="./images/fake-1.png" class="shrinkToFit" width="660" style="border:2px solid black">
+ <img src="./images/coming-soon.jpg" class="shrinkToFit" width="660" style="border:2px solid black">
 </div>
 
-
-
-<mcq label="Exercise 1" palette="past" :images="[`./images/v1a-exercise.png`]" question="Two distinct points in space can have the same image on the picture plane." :choices="[
-    {
-      correct: true,
-      answer: `True`,
-      response: `Correct!  If the line determined by the two points meets your eye, then they will both have the same image on the picture plane.`
-    },
-    {
-      correct: false,
-      answer: `False`,
-      response: `Actually, it is possible.  Remember, the points in space need not lie on the ground plane.`
-    }
-  ]">
-</mcq>
-
-
-<mcq label="Exercise 2" palette="past" :images="[]" question="Two distinct points on the picture plane can be the image of the same point in space." :choices="[
-    {
-      correct: false,
-      answer: `True`,
-      response: `No, the image of a point will be at most a single point on the picture plane.  (Can it be less? That's something worth thinking about!)   `
-    },
-    {
-      correct: true,
-      answer: `False`,
-      response: `Correct, the image of a point can't possibly be two or more points.`
-    }
-  ]">
-</mcq>
-
-
-
-
-<p> Video 1B.</p>
-
-
-<div class="flex-container">
- <img src="./images/fake-1.png" class="shrinkToFit" width="660" style="border:2px solid black">
-</div>
-
-
-<mcq label="Exercise 3" palette="past" :images="[`./images/v1b-exercise.png`]" question="What is the height of the image of point (2,0) on the picture plane?" :choices="[
-    {
-      correct: false,
-      answer: `1/3`,
-      response: `No. Look more carefully at the picture. The sight line hits the picture plane higher up!`
-    },
-    {
-      correct: false,
-      answer: `1/2`,
-      response: `No.  It might be useful to consider the slope of the sight line.`
-    },
-
-    {
-      correct: true,
-      answer: `2/3`,
-      response: `Correct.  The slope of the sight line is -1/3.`
-    },
-    {
-      correct: false,
-      answer: `3/4`,
-      response: `No.  It might be helpful to consider the slope of the sight line.`
-    }
-  ]">
-</mcq>
-
-<p> Video 1C.</p>
-
-<div class="flex-container">
- <img src="./images/fake-1.png" class="shrinkToFit" width="660" style="border:2px solid black">
-</div>
-
-
-<mcq-pictorial label="Exercise 4" palette="past" :images="[`./images/v1c-exercise.png`]" question="Which picture best represents what you would see when viewing these two parallel sets of railway tracks?" :choices="[
-    {
-      correct: false,
-      answer: `A`,
-      picture: `./images/v1c-solution-A.png`, 
-      response: `Not quite. Pay closer attention to the railway ties.`
-    },
-    {
-      correct: true,
-      answer: `B`,
-      picture: `./images/v1c-solution-B.png`, 
-      response: `Yes! Since the tracks are parallel, they'll share a single vanishing point.  And both sets of tracks have railway ties that are parallel to the picture plane.`
-    },
-    {
-      correct: false,
-      answer: `C`,
-      picture: `./images/v1c-solution-C.png`, 
-      response: `Are you sure?  Consider all the features these tracks have in common.`
-    },
-    {
-      correct: false,
-      answer: `D`,
-      picture: `./images/v1c-solution-D.png`, 
-      response: `Not quite.  Pay closer attention to the vanishing points.`
-    }
-  ]">
-</mcq-pictorial>
-
-<p> Video 1D.</p>
-
-<div class="flex-container">
- <img src="./images/fake-1.png" class="shrinkToFit" width="660" style="border:2px solid black">
-</div>
-
-<mcq label="Exercise 5" palette="past" :images="[`./images/v1d-exercise.png`]" question="Which of the following statements is true?" :choices="[
-    {
-      correct: false,
-      answer: `Given a large enough picture plane, the viewer will see the vanishing point of the railway ties to the left of the railway tracks.`,
-      response: `No.`
-    },
-    {
-      correct: false,
-      answer: `Given a large enough picture plane, the viewer will see the vanishing point of the railway ties to the right of the railway tracks.`,
-      response: `No.`
-    },
-    {
-      correct: true,
-      answer: `The images of the railway ties will not converge to a vanishing point, no matter how large the picture plane.`,
-      response: `Correct.  The railway ties are parallel to the picture plane, so their images will remain parallel.  Hence no vanishing point!`
-    }
-  ]">
-</mcq>
-
-<p> Video 1E.</p>
-
-<div class="flex-container">
- <img src="./images/fake-1.png" class="shrinkToFit" width="660" style="border:2px solid black">
-</div>
-
-
-
-<mcq-pictorial label="Exercise 6" palette="past" :images="[`./images/v1e-exercise.png`]" question="Which picture best represents the image of these three sets of railway tracks?" :choices="[
-    {
-      correct: false,
-      answer: `A`,
-      picture: `./images/v1e-solution-A.png`, 
-      response: `Not quite...the different tracks belong to different families of parallel lines.  So they'll converge to different vanishing points.`
-    },
-    {
-      correct: false,
-      answer: `B`,
-      picture: `./images/v1e-solution-B.png`, 
-      response: `Are you sure?  Notice the tracks belong to different families of parallel lines.  And not all the railway ties are parallel to the picture plane!`
-    },
-    {
-      correct: true,
-      answer: `C`,
-      picture: `./images/v1e-solution-C.png`, 
-      response: `Correct!  The tracks will converge to three distinct vanishing points.  And the railway ties are not all be parallel to the picture plane.`
-    },
-    {
-      correct: false,
-      answer: `D`,
-      picture: `./images/v1e-solution-D.png`, 
-      response: `Not quite.  Pay closer attention to the railway ties.`
-    }
-  ]">
-</mcq-pictorial>
-
-
-
-
-
-<mcq label="Exercise 7" palette="past" :images="[`./images/v1f-exercise.png`]" question="Here is a painting by Gustave Caillebotte, with the horizon line marked in yellow.  Notice that the red and blue families of parallel lines have vanishing points lying off of the horizon line.  Why does this not contradict the Horizon Line Theorem?" :choices="[
-    {
-      correct: false,
-      answer: `The red and blue lines are parallel to the picture plane.`,
-      response: `No. Notice that the red and blue lines are the images of the diagonal truss beams of the bridge.  These beams are not parallel to the picture plane.`
-    },
-    {
-      correct: false,
-      answer: `The red and blue lines do not represent families of parallel lines.`,
-      response: `No. The red lines do indeed form one parallel family, and blue lines another.  This is why they converge to vanishing points, one above and one below the painting.`
-    },
-
-    {
-      correct: true,
-      answer: `The red and blue lines are not parallel to the ground plane.`,
-      response: `Correct!  Both families have a vertical component, so they point upwards or downwards in space.  Since they aren't parallel to the ground plane, the Horizon Line Theorem does not apply.`
-    },
-    {
-      correct: false,
-      answer: `The yellow line is not the horizon line. The observer is viewing the scene with their head tilted 90 degrees, so the horizon line is vertical.`,
-      response: `Hmmm...a clever argument. But I can assure you that was not how it was painted, or intended to be viewed.`
-    }
-  ]">
-</mcq>
 
 
 
