updated link to intro video

--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 
 Welcome to The Topology of Movement!  To get started, you can watch the Introduction video below:
 
-
 <div class="video-container">
   <iframe
-      src="https://www.youtube.com/embed/2rvTg5SpiO8"
+      src="https://www.youtube.com/embed/L2FPP7yJMOk"
       width="700"
       height="480"
       frameborder="0"
